adds fonts and header

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <title>Whirl landing page</title>
-
-    <link rel="stylesheet" href="./css/main.css">
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&family=Inter&display=swap" rel="stylesheet">
+    <!-- common styles -->
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -19,18 +22,17 @@
                 <svg class="logo__icon">
                     <use href="./svg/sprite.svg#logo"></use>
                 </svg>
-                <span class="logo__text">Whirl</span>
             </a>
             <ul class="header__nav-items">
-                <li class="header__nav-item"><a class="header___nav-link" href=""></a></li>
-                <li class="header__nav-item"><a class="header___nav-link" href=""></a></li>
-                <li class="header__nav-item"><a class="header___nav-link" href=""></a></li>
-                <li class="header__nav-item"><a class="header___nav-link" href=""></a></li>
+                <li class="header__nav-item"><a class="header__nav-link" href="">Features</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" href="">Pricing</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" href="">Integrations</a></li>
+                <li class="header__nav-item"><a class="header__nav-link" href="">Learn</a></li>
             </ul>
         </nav>
         <div class="header__buttons">
-            <button class="header__button"></button>
-            <button class="header__button"></button>
+            <button class="header__button btn btn--secondary">Sign in</button>
+            <button class="header__button btn">Book a demo</button>
         </div>
     </div>
 </header>
@@ -45,7 +47,7 @@
 
 </footer>
 
-
+<!-- common js -->
 <script src="./js/script.js"></script>
 </body>
 
