adds hero component

--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
 <!-- main -->
 <main class="main">
 
+    <!-- hero -->
+    <section class="hero">
+        <div class="hero__container container">
+            <div class="hero__content">
+                <h1 class="hero__title">Your everyday tasks, automated.</h1>
+                <p class="hero__subtitle">Whirl lets you design and streamline your everyday tasks and workflows in just a few clicks.</p>
+                <button class="hero__button btn">Book a demo</button>
+                <a class="hero__link" href="" target="_blank">
+                    Learn more
+                    <svg class="hero__arrow" aria-hidden="true">
+                        <use href="./svg/sprite.svg#arrow"></use>
+                    </svg>
+                </a>
+            </div>
+            <img class="hero__photo" src="./img/hero/photo.png" width="452" height="422" alt="Board with stickers tasks">
+        </div>
+    </section>
+
 </main>
 
 <!-- footer -->
