--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="hero__content">
                 <h1 class="hero__title">Your everyday tasks, automated.</h1>
                 <p class="hero__subtitle">Whirl lets you design and streamline your everyday tasks and workflows in just a few clicks.</p>
-                <button class="hero__button btn">Book a demo</button>
+                <button class="hero__button btn btn--big">Book a demo</button>
                 <a class="hero__link" href="" target="_blank">
                     Learn more
                     <svg class="hero__arrow" aria-hidden="true">
