--- a/index.html
+++ b/index.html
@@ -58,6 +58,43 @@
         </div>
     </section>
 
+    <!-- companies -->
+    <section class="companies">
+        <div class="companies__container">
+            <h2 class="companies__title">Trusted by 50,000+ companies</h2>
+            <ul class="companies__list">
+                <li class="companies__item">
+                    <a class="companies__link" href="" aria-label="FocusFox company logo">
+                        <svg class="companies__logo" width="124" height="33">
+                            <use href="./svg/sprite.svg#companies1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="companies__item">
+                    <a class="companies__link" href="" aria-label="NowInTech company logo">
+                        <svg class="companies__logo" width="159" height="27">
+                            <use href="./svg/sprite.svg#companies2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="companies__item">
+                    <a class="companies__link" href="" aria-label="Optimer company logo">
+                        <svg class="companies__logo" width="148" height="33">
+                            <use href="./svg/sprite.svg#companies3"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="companies__item">
+                    <a class="companies__link" href="" aria-label="Carded company logo">
+                        <svg class="companies__logo" width="117" height="34">
+                            <use href="./svg/sprite.svg#companies4"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+
 </main>
 
 <!-- footer -->
