adds advantage component

--- a/index.html
+++ b/index.html
@@ -95,6 +95,27 @@
         </div>
     </section>
 
+    <!-- advantage -->
+    <section class="advantage">
+        <div class="advantage__container container">
+            <h2 class="visually-hidden">Our advantages</h2>
+            <ul class="advantage__list">
+                <li class="advantage__item advantage__item--fast">
+                    <h3 class="advantage__heading">Fast. Really fast.</h3>
+                    <p class="advantage__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </li>
+                <li class="advantage__item advantage__item--buck">
+                    <h3 class="advantage__heading">More bang for buck.</h3>
+                    <p class="advantage__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </li>
+                <li class="advantage__item advantage__item--safe">
+                    <h3 class="advantage__heading">Safe and secure.</h3>
+                    <p class="advantage__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
 </main>
 
 <!-- footer -->
