adds services component

--- a/index.html
+++ b/index.html
@@ -116,6 +116,54 @@
         </div>
     </section>
 
+    <!-- services -->
+    <section class="services">
+        <div class="services__container container">
+            <h2 class="services__title">We will take care of everything, <br>so you can get back to relaxing.</h2>
+            <div class="services__content">
+                <ul class="services__items">
+                    <li class="services__item">
+                        <button class="services__button" title="Show content" aria-expanded="false">
+                            Anti-loss technology
+                        </button>
+                        <div class="services__text" aria-hidden="true">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua.</p>
+                        </div>
+                    </li>
+                    <li class="services__item">
+                        <button class="services__button" title="Show content" aria-expanded="false">
+                            Exchange easily
+                        </button>
+                        <div class="services__text" aria-hidden="true">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua.</p>
+                        </div>
+                    </li>
+                    <li class="services__item">
+                        <button class="services__button" title="Show content" aria-expanded="false">
+                            Fully encrypted
+                        </button>
+                        <div class="services__text" aria-hidden="true">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua.</p>
+                        </div>
+                    </li>
+                    <li class="services__item">
+                        <button class="services__button" title="Show content" aria-expanded="false">
+                            Plenty of options
+                        </button>
+                        <div class="services__text" aria-hidden="true">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                                dolore magna aliqua.</p>
+                        </div>
+                    </li>
+                </ul>
+                <img class="services__photo" src="./img/services/right-photo.png" width="481" height="479" alt="Computer">
+            </div>
+        </div>
+    </section>
+
 </main>
 
 <!-- footer -->
