adds about component

--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
             <h2 class="visually-hidden">Our advantages</h2>
             <ul class="advantage__list">
                 <li class="advantage__item advantage__item--fast">
-                    <h3 class="advantage__heading">Fast. Really fast.</h3>
+                    <h3 class="advantage__heading heading">Fast. Really fast.</h3>
                     <p class="advantage__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </li>
                 <li class="advantage__item advantage__item--buck">
-                    <h3 class="advantage__heading">More bang for buck.</h3>
+                    <h3 class="advantage__heading heading">More bang for buck.</h3>
                     <p class="advantage__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </li>
                 <li class="advantage__item advantage__item--safe">
-                    <h3 class="advantage__heading">Safe and secure.</h3>
+                    <h3 class="advantage__heading heading">Safe and secure.</h3>
                     <p class="advantage__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </li>
             </ul>
@@ -119,11 +119,11 @@
     <!-- services -->
     <section class="services">
         <div class="services__container container">
-            <h2 class="services__title">We will take care of everything, <br>so you can get back to relaxing.</h2>
+            <h2 class="services__title title">We will take care of everything, <br>so you can get back to relaxing.</h2>
             <div class="services__content">
                 <ul class="services__items">
                     <li class="services__item">
-                        <button class="services__button" title="Show content" aria-expanded="false">
+                        <button class="services__button services__button--anti" title="Show content" aria-expanded="false">
                             Anti-loss technology
                         </button>
                         <div class="services__text" aria-hidden="true">
@@ -132,7 +132,7 @@
                         </div>
                     </li>
                     <li class="services__item">
-                        <button class="services__button" title="Show content" aria-expanded="false">
+                        <button class="services__button services__button--exchange" title="Show content" aria-expanded="false">
                             Exchange easily
                         </button>
                         <div class="services__text" aria-hidden="true">
@@ -141,7 +141,7 @@
                         </div>
                     </li>
                     <li class="services__item">
-                        <button class="services__button" title="Show content" aria-expanded="false">
+                        <button class="services__button services__button--fully" title="Show content" aria-expanded="false">
                             Fully encrypted
                         </button>
                         <div class="services__text" aria-hidden="true">
@@ -150,7 +150,7 @@
                         </div>
                     </li>
                     <li class="services__item">
-                        <button class="services__button" title="Show content" aria-expanded="false">
+                        <button class="services__button services__button--plenty" title="Show content" aria-expanded="false">
                             Plenty of options
                         </button>
                         <div class="services__text" aria-hidden="true">
@@ -164,6 +164,27 @@
         </div>
     </section>
 
+    <!-- about -->
+    <section class="about">
+        <div class="about__container container">
+            <h2 class="about__title title">What's Whirl all about?</h2>
+            <ul class="about__items">
+                <li class="about__item about__item--place">
+                    <h3 class="about__heading heading">All on one place.</h3>
+                    <p class="about__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </li>
+                <li class="about__item about__item--alerts">
+                    <h3 class="about__heading heading">Get daily alerts.</h3>
+                    <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                </li>
+                <li class="about__item about__item--safe">
+                    <h3 class="about__heading heading">Safe and secure.</h3>
+                    <p class="about__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+    
 </main>
 
 <!-- footer -->
