adds pluses component

--- a/index.html
+++ b/index.html
@@ -184,7 +184,40 @@
             </ul>
         </div>
     </section>
-    
+
+    <!-- pluses -->
+    <section class="pluses">
+        <div class="pluses__container container">
+            <img class="pluses__photo" src="./img/pluses/left-photo.png" width="382" height="374" alt="Diagrams">
+            <div class="pluses__content">
+                <h2 class="pluses__title title">Set, forget, and then track.</h2>
+                <p class="pluses__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <ul class="pluses__list">
+                    <li class="pluses__item">
+                        <svg class="pluses__icon">
+                            <use href="./svg/sprite.svg#ok"></use>
+                        </svg>
+                        Understand your options
+                    </li>
+                    <li class="pluses__item">
+                        <svg class="pluses__icon">
+                            <use href="./svg/sprite.svg#ok"></use>
+                        </svg>
+                        No lock-ins
+                    </li>
+                    <li class="pluses__item">
+                        <svg class="pluses__icon">
+                            <use href="./svg/sprite.svg#ok"></use>
+                        </svg>
+                        You own the shares
+                    </li>
+                </ul>
+                <button class="pluses__button btn btn--big">Book a Demo</button>
+            </div>
+        </div>
+    </section>
+
+
 </main>
 
 <!-- footer -->
