adds tasks component

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="services__container container">
             <h2 class="services__title title">We will take care of everything, <br>so you can get back to relaxing.</h2>
             <div class="services__content">
-                <ul class="services__items">
+                <ul class="services__list">
                     <li class="services__item">
                         <button class="services__button services__button--anti" title="Show content" aria-expanded="false">
                             Anti-loss technology
@@ -168,7 +168,7 @@
     <section class="about">
         <div class="about__container container">
             <h2 class="about__title title">What's Whirl all about?</h2>
-            <ul class="about__items">
+            <ul class="about__list">
                 <li class="about__item about__item--place">
                     <h3 class="about__heading heading">All on one place.</h3>
                     <p class="about__text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -194,19 +194,19 @@
                 <p class="pluses__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <ul class="pluses__list">
                     <li class="pluses__item">
-                        <svg class="pluses__icon">
+                        <svg class="pluses__icon" aria-hidden="true">
                             <use href="./svg/sprite.svg#ok"></use>
                         </svg>
                         Understand your options
                     </li>
                     <li class="pluses__item">
-                        <svg class="pluses__icon">
+                        <svg class="pluses__icon" aria-hidden="true">
                             <use href="./svg/sprite.svg#ok"></use>
                         </svg>
                         No lock-ins
                     </li>
                     <li class="pluses__item">
-                        <svg class="pluses__icon">
+                        <svg class="pluses__icon" aria-hidden="true">
                             <use href="./svg/sprite.svg#ok"></use>
                         </svg>
                         You own the shares
@@ -214,6 +214,32 @@
                 </ul>
                 <button class="pluses__button btn btn--big">Book a Demo</button>
             </div>
+        </div>
+    </section>
+
+    <!-- tasks -->
+    <section class="tasks">
+        <div class="tasks__container container">
+            <h2 class="tasks__title title">Your tasks, automated.</h2>
+            <p class="tasks__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <ul class="tasks__list">
+                <li class="tasks__item tasks__item--learn">
+                    <h3 class="tasks__heading heading">Learn your options.</h3>
+                    <p class="tasks__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                </li>
+                <li class="tasks__item tasks__item--stay">
+                    <h3 class="tasks__heading heading">Stay informed.</h3>
+                    <p class="tasks__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et doloretro.</p>
+                </li>
+                <li class="tasks__item tasks__item--automate">
+                    <h3 class="tasks__heading heading">Automate it all.</h3>
+                    <p class="tasks__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor ipsum.</p>
+                </li>
+                <li class="tasks__item tasks__item--informed">
+                    <h3 class="tasks__heading heading">Stay informed.</h3>
+                    <p class="tasks__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut labore et consectetur.</p>
+                </li>
+            </ul>
         </div>
     </section>
 
