adds get component

--- a/index.html
+++ b/index.html
@@ -294,6 +294,28 @@
         </div>
     </section>
 
+    <!-- get -->
+    <section class="get">
+        <div class="get__container container">
+            <h2 class="get__title title">Get started with Whirl</h2>
+            <p class="get__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            <button class="get__button btn btn--big">Book a Demo</button>
+            <ul class="get__list">
+                <li class="get__item">
+                    <svg class="get__icon" aria-hidden="true">
+                        <use href="./svg/sprite.svg#ok"></use>
+                    </svg>
+                    Free 30-day trial
+                </li>
+                <li class="get__item">
+                    <svg class="get__icon" aria-hidden="true">
+                        <use href="./svg/sprite.svg#ok"></use>
+                    </svg>
+                    No credit-card required
+                </li>
+            </ul>
+        </div>
+    </section>
 
 </main>
 
