adds footer component

--- a/index.html
+++ b/index.html
@@ -333,23 +333,23 @@
                 <li class="information__menu-item">
                     <h2 class="information__heading">Info</h2>
                     <ul class="information__list">
-                        <li class="information__item"><a class="information__link" href="">Features</a></li>
-                        <li class="information__item"><a class="information__link" href="">Pricing</a></li>
-                        <li class="information__item"><a class="information__link" href="">Blog</a></li>
-                        <li class="information__item"><a class="information__link" href="">Support</a></li>
-                        <li class="information__item"><a class="information__link" href="">Terms & Conditions</a></li>
-                        <li class="information__item"><a class="information__link" href="">Privacy Policy</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Features</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Pricing</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Blog</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Support</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Terms & Conditions</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Privacy Policy</a></li>
                     </ul>
                 </li>
                 <li class="information__menu-item">
                     <h2 class="information__heading">Admin</h2>
                     <ul class="information__list">
-                        <li class="information__item"><a class="information__link" href="">Style Guide</a></li>
-                        <li class="information__item"><a class="information__link" href="">Licenses</a></li>
-                        <li class="information__item"><a class="information__link" href="">Instructions</a></li>
-                        <li class="information__item"><a class="information__link" href="">Changelog</a></li>
-                        <li class="information__item"><a class="information__link" href="">Password</a></li>
-                        <li class="information__item"><a class="information__link" href="">404</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Style Guide</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Licenses</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Instructions</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Changelog</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">Password</a></li>
+                        <li class="information__item"><a class="information__link" href="" target="_blank">404</a></li>
                     </ul>
                 </li>
             </ul>
@@ -375,7 +375,32 @@
 
 <!-- footer -->
 <footer class="footer">
-
+    <div class="footer__container container">
+        <p class="footer__copy">&copy; 2022 Whirl. All Rights Reserved. Illustrations by <a class="footer__copy-link" href="">Streamline</a>.</p>
+        <ul class="footer__list">
+            <li class="footer__item">
+                <a class="footer__link" href="" target="_blank">
+                    <svg class="footer__icon">
+                        <use href="./svg/sprite.svg#twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="footer__item">
+                <a class="footer__link" href="" target="_blank">
+                    <svg class="footer__icon">
+                        <use href="./svg/sprite.svg#linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="footer__item">
+                <a class="footer__link" href="" target="_blank">
+                    <svg class="footer__icon">
+                        <use href="./svg/sprite.svg#facebook"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
 </footer>
 
 <!-- common js -->
