--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- companies -->
     <section class="companies">
-        <div class="companies__container">
+        <div class="companies__container container">
             <h2 class="companies__title">Trusted by 50,000+ companies</h2>
             <ul class="companies__list">
                 <li class="companies__item">
@@ -118,42 +118,38 @@
     <!-- services -->
     <section class="services">
         <div class="services__container container">
-            <h2 class="services__title title">We will take care of everything, <br>so you can get back to relaxing.</h2>
+            <h2 class="services__title title">We will take care of everything, so you can get back to relaxing.</h2>
             <ul class="services__list">
                 <li class="services__item">
                     <button class="services__button services__button--anti" title="Show content" aria-expanded="false">
-                        Anti-loss technology
+                        <p>Anti-loss technology</p>
                     </button>
                     <div class="services__text" aria-hidden="true">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </li>
                 <li class="services__item">
                     <button class="services__button services__button--exchange" title="Show content" aria-expanded="false">
-                        Exchange easily
+                        <p>Exchange easily</p>
                     </button>
                     <div class="services__text" aria-hidden="true">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </li>
                 <li class="services__item">
                     <button class="services__button services__button--fully" title="Show content" aria-expanded="false">
-                        Fully encrypted
+                        <p>Fully encrypted</p>
                     </button>
                     <div class="services__text" aria-hidden="true">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </li>
                 <li class="services__item">
                     <button class="services__button services__button--plenty" title="Show content" aria-expanded="false">
-                        Plenty of options
+                        <p>Plenty of options</p>
                     </button>
                     <div class="services__text" aria-hidden="true">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                            dolore magna aliqua.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </li>
             </ul>
