adds padding and font-size adaptation

--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
             <div class="hero__content">
                 <h1 class="hero__title">Your everyday tasks, automated.</h1>
                 <p class="hero__subtitle">Whirl lets you design and streamline your everyday tasks and workflows in just a few clicks.</p>
-                <button class="hero__button btn btn--big">Book a demo</button>
-                <a class="hero__link" href="" target="_blank">
-                    Learn more
-                    <svg class="hero__arrow" aria-hidden="true">
-                        <use href="./svg/sprite.svg#arrow"></use>
-                    </svg>
-                </a>
+                <div class="hero__items">
+                    <button class="hero__button btn btn--big">Book a demo</button>
+                    <a class="hero__link" href="" target="_blank">
+                        Learn more
+                        <svg class="hero__arrow" aria-hidden="true">
+                            <use href="./svg/sprite.svg#arrow"></use>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -122,7 +124,7 @@
             <ul class="services__list">
                 <li class="services__item">
                     <button class="services__button services__button--anti" title="Show content" aria-expanded="false">
-                        <p>Anti-loss technology</p>
+                        <span>Anti-loss technology</span>
                     </button>
                     <div class="services__text" aria-hidden="true">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -130,7 +132,7 @@
                 </li>
                 <li class="services__item">
                     <button class="services__button services__button--exchange" title="Show content" aria-expanded="false">
-                        <p>Exchange easily</p>
+                        <span>Exchange easily</span>
                     </button>
                     <div class="services__text" aria-hidden="true">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -138,7 +140,7 @@
                 </li>
                 <li class="services__item">
                     <button class="services__button services__button--fully" title="Show content" aria-expanded="false">
-                        <p>Fully encrypted</p>
+                        <span>Fully encrypted</span>
                     </button>
                     <div class="services__text" aria-hidden="true">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -146,7 +148,7 @@
                 </li>
                 <li class="services__item">
                     <button class="services__button services__button--plenty" title="Show content" aria-expanded="false">
-                        <p>Plenty of options</p>
+                        <span>Plenty of options</span>
                     </button>
                     <div class="services__text" aria-hidden="true">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
